updating paths to be relative...

--- a/notebooks/finetuned_tweetyBERT.ipynb
+++ b/notebooks/finetuned_tweetyBERT.ipynb
@@ -86,7 +86,7 @@
     "from linear_probe import LinearProbeModel, LinearProbeTrainer\n",
     "\n",
     "classifier_model = LinearProbeModel(num_classes=21, model_type=\"neural_net\", model=tweety_bert_model, freeze_layers=True, layer_num=-1, layer_id=\"feed_forward_output_relu\", classifier_dims=1536)\n",
-    "classifier_model = classifier_model.to(device)\n"
+    "classifier_model = classifier_model.to(device)"
    ]
   },
   {
