relative pos enc implemented

--- a/notebooks/finetuned_tweetyBERT.ipynb
+++ b/notebooks/finetuned_tweetyBERT.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/george-vengrovski/anaconda3/envs/canary-vae/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -25,8 +34,8 @@
     "from utils import detailed_count_parameters, load_weights, load_model\n",
     "\n",
     "\n",
-    "weights_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/10mask/saved_weights/model_step_49995.pth\"\n",
-    "config_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/10mask/config.json\"\n",
+    "weights_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/10mask_500_cluster_relative/saved_weights/model_step_49995.pth\"\n",
+    "config_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/10mask_500_cluster_relative/config.json\"\n",
     "\n",
     "tweety_bert_model = load_model(config_path, weights_path)\n",
     "\n",
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
