working on upgrading visualization

--- a/notebooks/Competing_Methods_FER.ipynb
+++ b/notebooks/Competing_Methods_FER.ipynb
@@ -491,176 +491,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>audio_file</th>\n",
-       "      <th>label</th>\n",
-       "      <th>onset_s</th>\n",
-       "      <th>offset_s</th>\n",
-       "      <th>onset_sample</th>\n",
-       "      <th>offset_sample</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>llb3_0002_2018_04_23_14_18_03.wav</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0.035079</td>\n",
-       "      <td>0.948345</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>llb3_0002_2018_04_23_14_18_03.wav</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.068073</td>\n",
-       "      <td>13.627528</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>686.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>llb3_0002_2018_04_23_14_18_03.wav</td>\n",
-       "      <td>8</td>\n",
-       "      <td>13.663447</td>\n",
-       "      <td>14.907619</td>\n",
-       "      <td>687.0</td>\n",
-       "      <td>750.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>llb3_0002_2018_04_23_14_18_03.wav</td>\n",
-       "      <td>10</td>\n",
-       "      <td>14.950522</td>\n",
-       "      <td>16.017098</td>\n",
-       "      <td>752.0</td>\n",
-       "      <td>806.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>llb3_0002_2018_04_23_14_18_03.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16.167134</td>\n",
-       "      <td>16.732857</td>\n",
-       "      <td>813.0</td>\n",
-       "      <td>842.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16103</th>\n",
-       "      <td>llb3_4311_2018_05_03_16_58_56.wav</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11.101270</td>\n",
-       "      <td>12.840317</td>\n",
-       "      <td>559.0</td>\n",
-       "      <td>646.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16104</th>\n",
-       "      <td>llb3_4311_2018_05_03_16_58_56.wav</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12.938095</td>\n",
-       "      <td>14.433696</td>\n",
-       "      <td>651.0</td>\n",
-       "      <td>726.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16105</th>\n",
-       "      <td>llb3_4314_2018_05_03_18_17_42.wav</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.222993</td>\n",
-       "      <td>0.455465</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>23.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16106</th>\n",
-       "      <td>llb3_4314_2018_05_03_18_17_42.wav</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.709683</td>\n",
-       "      <td>1.764762</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>89.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16107</th>\n",
-       "      <td>llb3_4314_2018_05_03_18_17_42.wav</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.968027</td>\n",
-       "      <td>2.682222</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>135.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>16108 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              audio_file  label    onset_s   offset_s  \\\n",
-       "0      llb3_0002_2018_04_23_14_18_03.wav     18   0.035079   0.948345   \n",
-       "1      llb3_0002_2018_04_23_14_18_03.wav      3   1.068073  13.627528   \n",
-       "2      llb3_0002_2018_04_23_14_18_03.wav      8  13.663447  14.907619   \n",
-       "3      llb3_0002_2018_04_23_14_18_03.wav     10  14.950522  16.017098   \n",
-       "4      llb3_0002_2018_04_23_14_18_03.wav      1  16.167134  16.732857   \n",
-       "...                                  ...    ...        ...        ...   \n",
-       "16103  llb3_4311_2018_05_03_16_58_56.wav      3  11.101270  12.840317   \n",
-       "16104  llb3_4311_2018_05_03_16_58_56.wav      6  12.938095  14.433696   \n",
-       "16105  llb3_4314_2018_05_03_18_17_42.wav     16   0.222993   0.455465   \n",
-       "16106  llb3_4314_2018_05_03_18_17_42.wav      6   0.709683   1.764762   \n",
-       "16107  llb3_4314_2018_05_03_18_17_42.wav      1   1.968027   2.682222   \n",
-       "\n",
-       "       onset_sample  offset_sample  \n",
-       "0               2.0           48.0  \n",
-       "1              54.0          686.0  \n",
-       "2             687.0          750.0  \n",
-       "3             752.0          806.0  \n",
-       "4             813.0          842.0  \n",
-       "...             ...            ...  \n",
-       "16103         559.0          646.0  \n",
-       "16104         651.0          726.0  \n",
-       "16105          11.0           23.0  \n",
-       "16106          36.0           89.0  \n",
-       "16107          99.0          135.0  \n",
-       "\n",
-       "[16108 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_7829/1291240839.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# Convert the list of new rows to a DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mnew_rows_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_rows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# Append the new rows to the original DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maggregated_df_onset_offset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_rows_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;31m# Sort by onset_sample to maintain order\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'onset_sample'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/canary-vae/lib/python3.11/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6200\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6201\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6202\u001b[0m         ):\n\u001b[1;32m   6203\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6204\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     ]
     }
    ],
    "source": [
