changes to make code more presentable and robust

--- a/notebooks/tweetyBERT_FER.ipynb
+++ b/notebooks/tweetyBERT_FER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,15 @@
     "import json\n",
     "import sys\n",
     "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader\n",
     "\n",
     "sys.path.append(\"src\")\n",
     "os.chdir('/home/george-vengrovski/Documents/projects/tweety_bert_paper')\n",
     "\n",
-    "from data_class import SongDataSet_Image, CollateFunction\n",
-    "from model import TweetyBERT\n",
-    "from analysis import plot_umap_projection\n",
-    "from utils import detailed_count_parameters, load_weights, load_model\n",
+    "from data_class import CollateFunction\n",
+    "from utils import load_model\n",
     "\n",
-    "\n",
-    "weights_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/llb3_train_500/saved_weights/model_step_19998.pth\"\n",
-    "config_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/llb3_train_500/config.json\"\n",
+    "weights_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/TweetyBERT-MSE_LLB3_10_Mask/saved_weights/model_step_15800.pth\"\n",
+    "config_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/experiments/TweetyBERT-MSE_LLB3_10_Mask/config.json\"\n",
     "\n",
     "tweety_bert_model = load_model(config_path, weights_path)\n",
     "\n",
@@ -42,23 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from data_class import SongDataSet_Image\n",
     "\n",
-    "train_dir = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_train_25\"\n",
-    "test_dir = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_test_25\"\n",
+    "train_dir = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_train\"\n",
+    "test_dir = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_test\"\n",
     "\n",
     "train_dataset = SongDataSet_Image(train_dir, num_classes=21, psuedo_labels_generated=False)\n",
     "test_dataset = SongDataSet_Image(test_dir, num_classes=21, psuedo_labels_generated=False)\n",
     "\n",
     "collate_fn = CollateFunction(segment_length=1000)  # Adjust the segment length if needed\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, collate_fn=collate_fn)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=4, shuffle=True, collate_fn=collate_fn)"
+    "train_loader = DataLoader(train_dataset, batch_size=48, shuffle=True, collate_fn=collate_fn)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=48, shuffle=True, collate_fn=collate_fn)"
    ]
   },
   {
@@ -70,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from linear_probe import LinearProbeModel, LinearProbeTrainer\n",
     "\n",
-    "classifier_model = LinearProbeModel(num_classes=21, model_type=\"neural_net\", model=tweety_bert_model, freeze_layers=True, layer_num=-1, layer_id=\"attention_output\", classifier_dims=196)\n",
+    "classifier_model = LinearProbeModel(num_classes=21, model_type=\"neural_net\", model=tweety_bert_model, freeze_layers=True, layer_num=-3, layer_id=\"attention_output\", classifier_dims=196)\n",
     "classifier_model = classifier_model.to(device)"
    ]
   },
@@ -98,7 +93,7 @@
     }
    ],
    "source": [
-    "trainer = LinearProbeTrainer(model=classifier_model, train_loader=train_loader, test_loader=test_loader, device=device, lr=1e-3, plotting=True, batches_per_eval=100, desired_total_batches=1e4, patience=4)\n",
+    "trainer = LinearProbeTrainer(model=classifier_model, train_loader=train_loader, test_loader=test_loader, device=device, lr=1e-3, plotting=True, batches_per_eval=1, desired_total_batches=1e4, patience=4)\n",
     "trainer.train()"
    ]
   },
