--- a/test.ipynb
+++ b/test.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "def calculate_relative_position_labels(ground_truth_labels, silence=0):\n",
     "    \"\"\"\n",
     "    Creates a new list, which labels each timebin's relative position within each phrase.\n",
@@ -22,46 +23,59 @@
     "    labels_array = np.array(ground_truth_labels)\n",
     "    relative_positions = np.zeros_like(labels_array, dtype=float)\n",
     "\n",
-    "    # Function to calculate relative positions within a phrase\n",
-    "    def calculate_relative_positions_for_phrase(phrase):\n",
-    "        phrase_length = len(phrase)\n",
-    "        return [(i + 1) / phrase_length for i in range(phrase_length)]\n",
+    "    # get first syllable that is not a silence\n",
+    "    current_syllable = labels_array[np.where(labels_array != 0)]\n",
+    "    current_syllable = current_syllable[0]\n",
     "\n",
-    "    # Identify start and end indices of phrases\n",
-    "    is_silence = (labels_array == silence)\n",
-    "    phrase_boundaries = np.diff(is_silence.astype(int))\n",
-    "    start_indices = np.where(phrase_boundaries == -1)[0] + 1\n",
-    "    end_indices = np.where(phrase_boundaries == 1)[0] + 1\n",
+    "    start_of_phrase_index = 0 \n",
+    "    end_of_phrase_index = 0 \n",
+    "    phrases = []\n",
     "\n",
-    "    if not is_silence[0]:\n",
-    "        start_indices = np.insert(start_indices, 0, 0)\n",
-    "    if not is_silence[-1]:\n",
-    "        end_indices = np.append(end_indices, len(labels_array))\n",
+    "    for i, value in enumerate(labels_array):\n",
+    "        # Check if it's the end of the array or the next element is silence\n",
+    "        if i < (len(labels_array)-1):\n",
+    "            if labels_array[i+1] != silence and labels_array[i+1] != current_syllable:\n",
+    "                # Phrase ends\n",
+    "                end_of_phrase_index = i\n",
+    "                # Calculate phrase size\n",
+    "                phrase_size = end_of_phrase_index - start_of_phrase_index + 1\n",
+    "                # Create a numpy array with uniformly increasing floats between 0 and 1\n",
+    "                phrase_array = np.linspace(0, 1, phrase_size)\n",
+    "                phrases.append(phrase_array)\n",
+    "                # Update start_of_phrase_index for the next phrase\n",
+    "                start_of_phrase_index = i + 1\n",
+    "                current_syllable = labels_array[i+1]\n",
+    "                \n",
     "\n",
-    "    # Calculate relative positions for each phrase\n",
-    "    for start, end in zip(start_indices, end_indices):\n",
-    "        phrase = labels_array[start:end]\n",
-    "        relative_positions[start:end] = calculate_relative_positions_for_phrase(phrase)\n",
-    "\n",
+    "    print(phrases)\n",
+    "    \n",
     "    return relative_positions.tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0]\n"
+      "6\n",
+      "0\n",
+      "5\n",
+      "2\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
    "source": [
     "# Example usage\n",
-    "ground_truth_labels = [1, 0, 1, 0, 2, 0, 2, 0, 2]\n",
+    "ground_truth_labels = [0, 1, 1, 0, 1, 0, 2, 0, 2, 0, 2, 3]\n",
+    "# 6\n",
+    "# 5\n",
+    "# 1 \n",
+    "\n",
     "relative_position_labels = calculate_relative_position_labels(ground_truth_labels)\n",
     "print(relative_position_labels)"
    ]
