--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,25 +47,22 @@
     "                current_syllable = labels_array[i+1]\n",
     "                \n",
     "\n",
-    "    print(phrases)\n",
+    "    phrases = np.concatenate(phrases)\n",
+    "    relative_positions[:phrases.shape[0]] = phrases\n",
     "    \n",
     "    return relative_positions.tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "0\n",
-      "5\n",
-      "2\n",
-      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "[0.0, 0.2, 0.4, 0.6000000000000001, 0.8, 1.0, 0.0, 0.25, 0.5, 0.75, 1.0, 0.0]\n"
      ]
     }
    ],
@@ -78,6 +75,24 @@
     "\n",
     "relative_position_labels = calculate_relative_position_labels(ground_truth_labels)\n",
     "print(relative_position_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.cuda.is_available())\n"
    ]
   }
  ],
@@ -97,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
